Fixed bug with vertical scrollbar appearing
Oops

--- a/BadPony/BadPony.WebApiHost/public/assets/css/app.css
+++ b/BadPony/BadPony.WebApiHost/public/assets/css/app.css
@@ -434,6 +434,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   background: #222;
+  box-sizing: border-box;
 }
 h1 {
   font-size: 20px;
