--- a/BadPony/BadPony.WebApiHost/public/assets/css/main.less
+++ b/BadPony/BadPony.WebApiHost/public/assets/css/main.less
@@ -17,6 +17,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     margin: 0;
     background: #222;
+    box-sizing: border-box;
 }
 
 h1 {
